--- a/src/App.scss
+++ b/src/App.scss
@@ -8,3 +8,13 @@
   height: 20px;
 }
 
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+  min-height: 100vh;
+  background-color: cadetblue;
+}
